--- a/Tether10/Tether10.csproj
+++ b/Tether10/Tether10.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
+    <Compile Include="Script.cs" />
     <Compile Include="TetherForm.cs">
       <SubType>Form</SubType>
     </Compile>
